--- a/plugins/vfs-connections/pom.xml
+++ b/plugins/vfs-connections/pom.xml
@@ -29,6 +29,7 @@
     <version.for.license>${project.version}</version.for.license>
     <js.project.list>requirejs,requirejs-text,angular,require-css,angular-i18n</js.project.list>
     <angular.version>1.5.8</angular.version>
+    <angular-animate.version>${angular.version}</angular-animate.version>
     <pentaho-osgi-bundles.version>8.3.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
     <angular-ui-router.version>0.4.2</angular-ui-router.version>
     <karaf-maven-plugin.version>3.0.3</karaf-maven-plugin.version>
