--- a/plugins/vfs-connections/ui/pom.xml
+++ b/plugins/vfs-connections/ui/pom.xml
@@ -40,6 +40,12 @@
     </dependency>
     <dependency>
       <groupId>pentaho</groupId>
+      <artifactId>pentaho-metastore-locator-api</artifactId>
+      <version>${pdi.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
       <artifactId>pentaho-platform-extensions</artifactId>
     </dependency>
     <dependency>
