--- a/plugins/vfs-connections/ui/pom.xml
+++ b/plugins/vfs-connections/ui/pom.xml
@@ -74,6 +74,12 @@
       <artifactId>javax.servlet-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.ops4j.pax.web</groupId>
+      <artifactId>pax-web-spi</artifactId>
+      <version>${pax-web-spi.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.webjars.npm</groupId>
       <artifactId>requirejs</artifactId>
       <scope>provided</scope>
